# Swisper_Core

./: .dockerignore  .gitignore  .pylintrc  Dockerfile.frontend  Dockerfile.gateway  HANDOVER_SUMMARY.md  LOCAL_SETUP_GUIDE.md  Makefile  PR_DESCRIPTION.md  README.md  SEARCH_ENHANCEMENT_COMPLETE.md  build_context_list.txt  debug_complete_flow.py  debug_fsm_retrieval.py  debug_intent_classification.py  debug_llm_adapter.py  debug_logging_config.py  debug_preference_extraction.py  demo_enhanced_flow.py  demo_websearch.py  docker-compose.yml  mcp_config.json  package-lock.json  package.json  playwright.config.js  pr_description.md  prompt_preprocessor.py  pyproject.toml  readme.md  requirements.txt  test_contract_intent_router.py  test_criteria_extraction.py  test_enhanced_contract.py  test_enhanced_intent_system.py  test_intent_classification.py  test_intent_debug.py  test_intent_extraction.py  test_off_topic_detection.py  test_preference_restructure_fix.py  test_washing_machine_integration.py  (+1 more)
.devcontainer/: devcontainer.json
Architecture/: swisper_architecture_plantuml.puml  swisper_memory_sequence.puml  use_case_1_knowledge_search.puml  use_case_2_2__email_triage_and_smart_reply.puml  use_case_3_3__email_rag_search.puml  use_case_4_4__contract-based_purchase_graphics_card.puml  use_case_5_5__complex_travel_booking.puml
contract_engine/: __init__.py  context.py  contract_engine.py  contract_pipeline.py  error_handling.py  fsm_monitoring.py  haystack_components.py  llm_helpers.py  performance_monitor.py  session_persistence.py  state_transitions.py  unified_session_store.py
contract_templates/: purchase_item.yaml
db_data/: orchestrator_sessions
docs/: API_DOCUMENTATION.md  DOCUMENTATION_MAINTENANCE.md  IMPLEMENTATION_CHECKLIST.md  PHASE3_DEPLOYMENT_GUIDE.md  PHASE4_DEPLOYMENT_GUIDE.md  PHASE4_PII_REDACTION_GUIDE.md  PHASE_1_DETAILED_PLAN.md  PHASE_1_STATUS_REPORT.md  README.md  T5_API_REFERENCE.md  T5_USAGE_GUIDE.md  example-docker-compose.yml  features.txt  intent_extraction_architecture.md  sample.txt  session-summary-fsm-debugging.md
examples/: demo_enhanced_flow.py  demo_websearch.py
frontend-template/: README.md  package.json
(+219 files in other folders)
