[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "Devin AI",email = "158243242+devin-ai-integration[bot]@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "psycopg[binary] (>=3.2.9,<4.0.0)",
    "langchain (>=0.3.25,<0.4.0)",
    "langchain-openai (>=0.3.22,<0.4.0)",
    "langgraph (>=0.4.8,<0.5.0)",
    "langchain-community (>=0.3.25,<0.4.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)"
]

[tool.poetry]
packages = [{include = "app", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
